LFLT-653 Old user management is removed from Leaflet backend  - Removed user management endpoints  - Removed a deprecated paged entry list endpoint  - Aligned all affected tests  - Some cleanup and refactoring